v2.0.0.41
GD Listings widget sorting not showing custom sorting options - FIXED

v2.0.0.40
Font Awesome Setting class updated to check if url is CSS or JS - UPDATED
Custom field icon output prefixing `fas` as a class which can break branding icons - FIXED
CPT default image not being used as a fallback image - FIXED
It saves default location to listing - FIXED
gd_map shortcode not showing all post markers for category search when enabled all_posts=1 - FIXED
GD Listings widget option "Hide widget if not posts" not working - FIXED
Add srcset to lightbox images to allow it to user larger images if available - ADDED
Changes for reCaptcha addon integration - ADDED
Recently viewed widget/block/shortcode added that shows the listings the user has recently viewed - ADDED

v2.0.0.39
Hook added to validate frontend add listing - ADDED
Link posts data not converted during v1 to v2 conversion - FIXED
Map pinpoint not working - FIXED
Near location search not showing results if query has GROUP BY clause - FIXED
Map setting show all on archive pages not working on CPT pages - FIXED
Random sort order now seeded for 24 hours so to improve query speed and allow paging to work - CHANGED
post_author option added in [gd_listings] to filter listings by author - ADDED
[gd_output_location] shortcode not escaping square brackets - FIXED
Font Awesome settings class added, now support both CSS and JS versions - CHANGED

v2.0.0.38
File upload limit issue - FIXED
PHP allow_url_fopen = off may break import csv - FIXED
Error checking if wp_insert_term fails during dummy data insertion - ADDED
Unable to add duplicate sort items for asc/desc - FIXED
gd_post_images widget now has option to set the specific image size - ADDED
Option added to add `noindex` tags to empty GD archive pages - ADDED
Post badge widget text can now accept HTML so for example font awesome icons can be used - ADDED
CPT slug not allowing - dash - FIXED
WP Super Duper lib updated to work with latest Gutenberg JS - FIXED