@@ -1,5 +1,5 @@
-cat_id,cat_name,cat_slug,cat_posttype,cat_parent,cat_schema,cat_description,cat_top_description,cat_image,cat_icon
-10,Banking,banking,gd_place,Financial,FinancialService,"Banking is a business of accepting deposits and lending money. It is carried out by financial intermediaries, which performs the functions of safe-guarding deposits and providing loans to the public.","Banking is a business of accepting deposits and lending money. It is carried out by financial intermediaries, which performs the functions of safe-guarding deposits and providing loans to the public.
+cat_id,cat_name,cat_slug,cat_posttype,cat_parent,cat_schema,cat_font_icon,cat_color,cat_description,cat_top_description,cat_image,cat_icon
+10,Banking,banking,gd_place,Financial,FinancialService,fas fa-ticket-alt,#bc2b15,"Banking is a business of accepting deposits and lending money. It is carried out by financial intermediaries, which performs the functions of safe-guarding deposits and providing loans to the public.","Banking is a business of accepting deposits and lending money. It is carried out by financial intermediaries, which performs the functions of safe-guarding deposits and providing loans to the public.
  In other words, Banking means accepting for the purpose of lending or investment of deposits of money from public repayable on demand and can be withdrawn by cheque, draft order and so on.",banking-thumb.jpg,banking-icon.png
-51,Hotels,hotels,gd_place,,Restaurant,"A commercial establishment providing lodging, meals, and other guest services. In general, to be called a hotel, an establishment must have a minimum of six letting bedrooms, at least three of which must have attached (ensuite) private bathroom facilities.","A commercial establishment providing lodging, meals, and other guest services. In general, to be called a hotel, an establishment must have a minimum of six letting bedrooms, at least three of which must have attached (ensuite) private bathroom facilities. Although hotels are classified into Star categories (1-Star to 5-Star), there is no standard method of assigning these ratings, and compliance with customary requirements is voluntary.",Hotels-thumb.jpg,Hotels-icon.png
-,Real Estate,real-estate,gd_place,,LocalBusiness,"Real estate is a special instance of real property, which is real estate ? land and buildings ? plus the rights of use and enjoyment that come with the land and its improvements.",,Real-Estate-thumb.jpg,Real-Estate-icon.png
+51,Hotels,hotels,gd_place,,Restaurant,fas fa-utensils,#008972,"A commercial establishment providing lodging, meals, and other guest services. In general, to be called a hotel, an establishment must have a minimum of six letting bedrooms, at least three of which must have attached (ensuite) private bathroom facilities.","A commercial establishment providing lodging, meals, and other guest services. In general, to be called a hotel, an establishment must have a minimum of six letting bedrooms, at least three of which must have attached (ensuite) private bathroom facilities. Although hotels are classified into Star categories (1-Star to 5-Star), there is no standard method of assigning these ratings, and compliance with customary requirements is voluntary.",Hotels-thumb.jpg,Hotels-icon.png
+,Real Estate,real-estate,gd_place,,LocalBusiness,fas fa-building,#62ab43,"Real estate is a special instance of real property, which is real estate ? land and buildings ? plus the rights of use and enjoyment that come with the land and its improvements.",,Real-Estate-thumb.jpg,Real-Estate-icon.png
